# Site-v4

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  astro.config.mjs  build.rs  bun.lockb  flake.nix  go.work  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci-nx.yml  ci.yml
content/blog/: hello-world.md
nix/modules/: devshell.nix  rust.nix
scripts/: bundle-js.ts  fetch_airtable.js  spotifyOauth.js
src/: assets.rs  content.config.ts  db.rs  index.css  main.rs  templates.rs  types.rs  utils.rs
src/assets/stylesheets/: 512club.css
src/components/: about.astro  footer.astro  guestlog.astro  hero.astro  projects.astro
src/components/about/: education.astro  education.tsx  experience.astro  experience.tsx
src/components/guestlog/: form.tsx  list.tsx
src/components/meta/: layout.astro
src/components/misc/: Spotify.tsx  StaticCollectionLookup.astro
src/css/: tailwind.css
src/js/controllers/: admin_delete_controller.ts  (+4 more)
src/layouts/: generalLayout.astro
src/lib/: StaticCollectionLookupFunction.ts  date.ts  s3-loader.ts  spotify.ts
src/middleware/: content_type.rs
src/pages/: gallery.astro  index.astro  setting-up-groupwise-web.md
src/routes/: api.rs  blog.rs  index.rs  mod.rs  ws.rs
src/workers/: mod.rs  nr_station_parser.rs  spotify.rs
templates/: base.html  index.html
templates/admin/: index.html  login.html  template.html
templates/blog/: index.html  slug.html
templates/parts/: form.html  guestlog.html  project.html  spotify.html
tools/importer/: Cargo.toml  README.md
tools/importer/src/: logger.rs  main.rs
tools/importer/src/commands/: guestlog.rs  mod.rs
tools/nr-station-parser/: go.mod  main.go
(+19 files in other folders)
