[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-sqlite = "0.5.3"
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
